--- a/elaf.html
+++ b/elaf.html
@@ -5,66 +5,57 @@
 <link href="elaf.css" rel="stylesheet" type="text/css">		
 </head>
 <body>
-<div id="header">
-	<br>
-Elaf Khalid<br><i>Painter</i>
 <nav>
-<a href="#services"	>painting services</a>	
-<a href="#projects"	>projects</a>
-<a href="#about"	>about</a>
-<a href="#contact"	style="border:none;">contact</a>	
-	</nav>
-	</div>
-
-<div style="width:100%; margin:0px; overflow:scroll; height:80%;"	>
-<div id="matto" style="text-align:center; font-family:'texts'; width:100%; margin-top:20%; font-size:18pt; color:#333;">
-<b>Our Matto is</b><br>
-Imagine to draw & Draw to live !	
-<a href="#projects">See My Project !</a>
-	</div>
-	
-	<div id="services">
-I can draw :-
-<ul>
-<li>Pencil Portrait</li>
-	<li>Nature Paint</li>
-	<li>Oli Paint</li>
-	<li>Digital Art</li>	
-	</ul>		
+	Elaf |
+<a href="#services"	>خدماتي</a>
+<a href="#project"	>اعمالي</a>
+<a href="#about"	>من انا</a>
+<a href="#contact"	>تواصل معي</a>
+	</nav><center>
+	<div>
+مرحبا ! انا اقوم برسم الشخصيات بقلم الرصاص و الجاف بمهارة عالية
+<br>
+	كما انه لدي المهارة لاستخدام الحاسوب لرسم لوحات رقمية
+	<ul>
+<li><a href="#projects">رؤية رسوماتي</a></li>	
+<li><a href="#">تنزيل السيرة الذاتية الخاصة بي</a></li>		
+		</ul>		
 		</div>
 		
-		<div id="projects">
-			see my best projects... hope you like it!
-<figure>
-<img src="1.jpg"	/>
-<img src="2.jpg"	/>
-<img src="3.png"	/>
-<img src="1.jpg"	/>
-	</figure>			
-			</div>
-			
-			<div id="about">
-My name is <b>Elaf Khalid</b> from Sudan
-i like "Painting" & i like to draw anything ,anytime ... 
-<br>
-	You can follow me in <a href="#"	><b>Instagram</b></a>
- & if you want to call me so you can just <a href="#"><b>Click me</b></a>
-				</div>
-				
-				<div id="contact">
-<center>
-	<b style="color:white;">Contact</b><br>
-<input id="field" type="text"	placeholder="Enter Your Name"/>
-</br>
-<input id="field" type="email" placeholder="Enter Your Email"/>
-<br>
-	<textarea id="field">
+	<div id="services">
+<b>اعمال الرسم</b><p>
+	اقوم برسم العديد من اللوحات الفنية بمختلف الادوات التي يمكن استخدامها و فيما يلي نجد خدمات الرسم التي اقوم بتقديمها
+</p> 	
+ 	<ul>
+<li>رسم البورتريه</li>	
+<li>رسوم الاطفال</li>		
+<li>اللوحات الزيتية</li>	
+<li>الرسم الرقمي</li>		
+		</ul>		
+		</div>		
 		
-		</textarea>
-		</br>
-		<button id="send">Send</button>
-</center>				
-					</div>
-	</div>
-</body>
+	<div id="projects">
+<b>معرض اعمالي</b><br>
+	<img src="1.jpg" />
+<img src="2.jpg" />
+<img src="3.png" />	
+			</div>				
+			
+	<div id="about">
+<b>من انا؟</b>
+	<p>
+اسمي ايلاف خالد ابراهيم ... من السودان احب الرسم و احاول دائما ان اطور مهاراتي به ... اطمح لأن اكون رسامة عالمية املك معرضي الخاص .. كما اطمح لعرض لوحاتي الفنية بأكبر المعارض
+<br>
+	✆ +249 12 415 7341
+</p>		
+			</div>					
+			
+	<div id="contact">
+<b>للتواصل معي</b><br>
+	<input type="text" placeholder="ادخل اسمك"/>
+<input type="text" placeholder="ادخل الايميل"/>
+<input type="text" placeholder="اكتب تعليقك هنا .."/><br>
+<input type="submit" value="ارسال"/>	
+			</div>										
+</center></body>
 </html>
